k8s/folly/apps/satisfactory/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: satisfactory
  namespace: satisfactory
  labels:
    app: satisfactory
spec:
  serviceName: satisfactory
  replicas: 1
  selector:
    matchLabels:
      app: satisfactory
  template:
    metadata:
      labels:
        app: satisfactory
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: satisfactory
          image: wolveix/satisfactory-server
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: 7777
              name: gametcp
              protocol: TCP
            - containerPort: 7777
              name: game
              protocol: UDP
          resources:
            requests:
              memory: 8Gi
          volumeMounts:
            - name: satisfactory-data
              mountPath: /config
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: satisfactory-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 25Gi
