k8s/folly/apps/satisfactory/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: satisfactory
  namespace: satisfactory
spec:
  gatewayClassName: cilium
  listeners:
    - name: game
      protocol: UDP
      port: 7777
      allowedRoutes:
        kinds:
          - kind: UDPRoute
    - name: gametcp
      protocol: TCP
      port: 7777
      allowedRoutes:
        kinds:
          - kind: TCPRoute

---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: gametcp
  namespace: satisfactory
spec:
  parentRefs:
    - name: satisfactory
      sectionName: gametcp
  rules:
    - backendRefs:
        - name: satisfactory
          port: 7777
